Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,22 +310,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Iguazu Falls', 'Country': 'Argentina', 'Population': 0, 'Area': 672}"
+       "{'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = cities[-4] \n",
+    "salina = cities[-2] \n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
