--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -412,7 +412,7 @@
     }
    ],
    "source": [
-    "cities[11]['City'] = \"p\" # 'PyeongChang'"
+    "cities[11]['City'] # 'PyeongChang'"
    ]
   },
   {
