Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -397,22 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Pyeongchang'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cities[11]['City'] = \"p\" # 'PyeongChang'"
+    "cities[11]['City'] = \"PyeongChang\" # 'PyeongChang'"
    ]
   },
   {
