--- a/index.ipynb
+++ b/index.ipynb
@@ -413,16 +413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,8 +430,7 @@
    "source": [
     "pyeongchang_values = list(cities[11])\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
-    "type(pyeongchang_values) # list"
+    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n"
    ]
   },
   {
